src/third_party/nasm/travis/test/selfref.stderr
./travis/test/selfref.asm:4: error: symbol `Zoom' not defined
./travis/test/selfref.asm:6: error: symbol `Boom' not defined
./travis/test/selfref.asm:14: error: symbol `_foo1' not defined
./travis/test/selfref.asm:11: ... from macro `Foo1' defined here
./travis/test/selfref.asm:15: error: symbol `_foo1' not defined
./travis/test/selfref.asm:23: error: symbol `_BAR2' not defined
./travis/test/selfref.asm:20: ... from macro `Foo2' defined here
./travis/test/selfref.asm:24: error: symbol `_bar2' not defined
